--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@ https://templatemo.com/tm-585-barber-shop
                             <li class="nav-item">
                                 <a class="nav-link click-scroll" href="#section_5">Kontak</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link click-scroll" href="#section_6">Login</a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
