--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ https://templatemo.com/tm-585-barber-shop
                                 <a class="nav-link click-scroll" href="#section_5">Kontak</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link click-scroll" href="#section_6">Login</a>
+                                 <a class="nav-link external" href="login.html">Login</a>
                             </li>
                         </ul>
                     </div>
