--- a/login.html
+++ b/login.html
@@ -1,131 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pink Blossom</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body, html {
-      height: 100%;
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #fce4ec, #f8bbd0);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Pink Blossom - Login</title>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  body, html {
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    background: linear-gradient(135deg, #fce4ec, #f8bbd0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-    .hidden { display: none; }
+  .hidden { display: none; }
 
-    .container {
-      background: #fff0f6;
-      padding: 3rem 2.5rem;
-      border-radius: 20px;
-      width: 350px;
-      box-shadow: 0 15px 30px rgba(244, 143, 177,0.25);
-      text-align: center;
-    }
+  .login-container, .main-content {
+    background: #fff0f6;
+    padding: 3rem 2.5rem;
+    border-radius: 20px;
+    width: 350px;
+    box-shadow: 0 15px 30px rgba(244, 143, 177,0.25);
+    text-align: center;
+  }
 
-    h2 {
-      color: #d81b60;
-      font-weight: 600;
-      margin-bottom: 1rem;
-    }
+  .login-container h2, .main-content h2 {
+    color: #d81b60;
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
 
-    p {
-      color: #ad1457;
-      margin-bottom: 2rem;
-    }
+  .login-container p {
+    color: #ad1457;
+    margin-bottom: 2rem;
+  }
 
-    .form-group {
-      margin-bottom: 1.5rem;
-      text-align: left;
-    }
+  .form-group {
+    margin-bottom: 1.5rem;
+    text-align: left;
+  }
 
-    label {
-      display: block;
-      margin-bottom: 0.5rem;
-      font-weight: 600;
-      color: #880e4f;
-      font-size: 0.9rem;
-    }
+  label {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+    color: #880e4f;
+    font-size: 0.9rem;
+  }
 
-    input[type="text"], input[type="password"] {
-      width: 100%;
-      padding: 12px 15px;
-      border: 2px solid #f48fb1;
-      border-radius: 12px;
-      font-size: 1rem;
-      transition: border-color 0.3s ease;
-    }
+  input[type="email"], input[type="password"] {
+    width: 100%;
+    padding: 12px 15px;
+    border: 2px solid #f48fb1;
+    border-radius: 12px;
+    font-size: 1rem;
+    transition: border-color 0.3s ease;
+  }
 
-    input:focus {
-      border-color: #ce93d8;
-      outline: none;
-    }
+  input[type="email"]:focus, input[type="password"]:focus {
+    border-color: #ce93d8;
+    outline: none;
+  }
 
-    button {
-      width: 100%;
-      background: #d81b60;
-      border: none;
-      color: white;
-      padding: 14px 0;
-      font-size: 1.1rem;
-      border-radius: 15px;
-      cursor: pointer;
-      font-weight: 600;
-      box-shadow: 0 6px 12px rgba(216, 27, 96,0.5);
-      transition: background-color 0.3s ease;
-      margin-top: 1rem;
-    }
+  button {
+    width: 100%;
+    background: #d81b60;
+    border: none;
+    color: white;
+    padding: 14px 0;
+    font-size: 1.1rem;
+    border-radius: 15px;
+    cursor: pointer;
+    font-weight: 600;
+    box-shadow: 0 6px 12px rgba(216, 27, 96,0.5);
+    transition: background-color 0.3s ease;
+  }
 
-    button:hover {
-      background: #ad1457;
-    }
+  button:hover {
+    background: #ad1457;
+  }
 
-    .link {
-      margin-top: 1.5rem;
-      display: inline-block;
-      color: #ba68c8;
-      cursor: pointer;
-      text-decoration: underline;
-      font-size: 0.9rem;
-    }
+  .forgot-password {
+    margin-top: 1rem;
+    font-size: 0.85rem;
+    color: #ba68c8;
+    cursor: pointer;
+    text-decoration: underline;
+  }
 
-    .link:hover {
-      color: #8e24aa;
-    }
+  .forgot-password:hover {
+    color: #8e24aa;
+  }
 
-    @media (max-width: 400px) {
-      .container {
-        width: 90%;
-        padding: 2rem 1.5rem;
-      }
+  @media (max-width: 400px) {
+    .login-container, .main-content {
+      width: 90%;
+      padding: 2rem 1.5rem;
     }
-  </style>
+  }
+</style>
 </head>
 <body>
 
-<!-- HOME PAGE -->
-<div id="homePage" class="container">
-  <h2>Welcome to Pink Blossom 🌸</h2>
-  <p>Click below to log in to your account.</p>
-  <a href="#" class="link" id="goToLogin">Go to Login</a>
-</div>
-
-<!-- LOGIN PAGE -->
-<div id="loginPage" class="container hidden">
-  <h2>Login</h2>
-  <p>Sign in to continue</p>
+<!-- LOGIN FORM -->
+<div id="loginSection" class="login-container" role="main" aria-label="Login form">
+  <h2>Welcome Back</h2>
+  <p>Sign in to continue to Pink Blossom</p>
   <form id="loginForm" aria-describedby="loginStatus">
     <div class="form-group">
-      <label for="emailInput">Username</label>
-      <input type="text" id="emailInput" name="email" required placeholder="Enter username" autocomplete="username" />
+      <label for="emailInput">Email Address</label>
+      <input type="email" id="emailInput" name="email" required placeholder="you@example.com" autocomplete="username" />
     </div>
     <div class="form-group">
       <label for="passwordInput">Password</label>
@@ -133,75 +124,60 @@
     </div>
     <button type="submit">Log In</button>
   </form>
-  <div class="link" tabindex="0" id="forgotPassword">Forgot Password?</div>
-  <div class="link" id="backToHome">← Back</div>
+  <div class="forgot-password" tabindex="0" role="button" aria-pressed="false">Forgot Password?</div>
   <div id="loginStatus" role="alert" aria-live="polite" style="margin-top:12px; font-size:0.9rem; color:#d81b60;"></div>
 </div>
 
-<!-- MAIN PAGE AFTER LOGIN -->
-<div id="mainPage" class="container hidden">
-  <h2>Welcome, Maghfira! 🎉</h2>
-  <p>You are now logged in as <strong>maghfira21</strong>.</p>
+<!-- INDEX / MAIN PAGE -->
+<div id="mainSection" class="main-content hidden">
+  <h2>Welcome to Pink Blossom 🌸</h2>
+  <p style="color: #6a1b9a; margin-top: 1rem;">You are now logged in.</p>
   <button onclick="logout()">Log Out</button>
 </div>
 
 <script>
-  const homePage = document.getElementById('homePage');
-  const loginPage = document.getElementById('loginPage');
-  const mainPage = document.getElementById('mainPage');
   const loginForm = document.getElementById('loginForm');
-  const loginStatus = document.getElementById('loginStatus');
+  const loginSection = document.getElementById('loginSection');
+  const mainSection = document.getElementById('mainSection');
+  const statusEl = document.getElementById('loginStatus');
 
-  // Navigasi antar "halaman"
-  document.getElementById('goToLogin').addEventListener('click', () => {
-    homePage.classList.add('hidden');
-    loginPage.classList.remove('hidden');
-  });
-
-  document.getElementById('backToHome').addEventListener('click', () => {
-    loginPage.classList.add('hidden');
-    homePage.classList.remove('hidden');
-    loginForm.reset();
-    loginStatus.textContent = '';
-  });
-
-  document.getElementById('forgotPassword').addEventListener('click', () => {
-    alert('Password reset feature is not implemented in this demo.');
-  });
-
-  // Login logic
   loginForm.addEventListener('submit', function(e) {
     e.preventDefault();
-    const username = e.target.email.value.trim();
+    const email = e.target.email.value.trim();
     const password = e.target.password.value.trim();
-    loginStatus.textContent = '';
+    statusEl.textContent = '';
 
-    if (!username || !password) {
-      loginStatus.style.color = '#c62828';
-      loginStatus.textContent = 'Please fill in both fields.';
+    if (!email || !password) {
+      statusEl.textContent = 'Please fill in both fields.';
       return;
     }
 
-    if (username !== 'maghfira21' || password !== 'rara21') {
-      loginStatus.style.color = '#c62828';
-      loginStatus.textContent = 'Invalid username or password.';
-      return;
-    }
-
-    loginStatus.style.color = '#4a148c';
-    loginStatus.textContent = 'Logging in...';
+    statusEl.style.color = '#4a148c';
+    statusEl.textContent = 'Logging in...';
 
     setTimeout(() => {
-      loginPage.classList.add('hidden');
-      mainPage.classList.remove('hidden');
-    }, 1000);
+      loginSection.classList.add('hidden');
+      mainSection.classList.remove('hidden');
+    }, 1200);
+  });
+
+  const forgotPassword = document.querySelector('.forgot-password');
+  forgotPassword.addEventListener('click', () => {
+    alert('Password reset feature is not implemented in this demo.');
+  });
+  forgotPassword.addEventListener('keydown', (e) => {
+    if (e.key === 'Enter' || e.key === ' ') {
+      e.preventDefault();
+      forgotPassword.click();
+    }
   });
 
   function logout() {
-    mainPage.classList.add('hidden');
-    homePage.classList.remove('hidden');
+    mainSection.classList.add('hidden');
+    loginSection.classList.remove('hidden');
+    loginForm.reset();
+    statusEl.textContent = '';
   }
 </script>
-
 </body>
 </html>
