--- a/login.html
+++ b/login.html
@@ -1,183 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Pink Blossom - Login</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  body, html {
-    height: 100%;
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(135deg, #fce4ec, #f8bbd0);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .hidden { display: none; }
-
-  .login-container, .main-content {
-    background: #fff0f6;
-    padding: 3rem 2.5rem;
-    border-radius: 20px;
-    width: 350px;
-    box-shadow: 0 15px 30px rgba(244, 143, 177,0.25);
-    text-align: center;
-  }
-
-  .login-container h2, .main-content h2 {
-    color: #d81b60;
-    font-weight: 600;
-    margin-bottom: 1rem;
-  }
-
-  .login-container p {
-    color: #ad1457;
-    margin-bottom: 2rem;
-  }
-
-  .form-group {
-    margin-bottom: 1.5rem;
-    text-align: left;
-  }
-
-  label {
-    display: block;
-    margin-bottom: 0.5rem;
-    font-weight: 600;
-    color: #880e4f;
-    font-size: 0.9rem;
-  }
-
-  input[type="email"], input[type="password"] {
-    width: 100%;
-    padding: 12px 15px;
-    border: 2px solid #f48fb1;
-    border-radius: 12px;
-    font-size: 1rem;
-    transition: border-color 0.3s ease;
-  }
-
-  input[type="email"]:focus, input[type="password"]:focus {
-    border-color: #ce93d8;
-    outline: none;
-  }
-
-  button {
-    width: 100%;
-    background: #d81b60;
-    border: none;
-    color: white;
-    padding: 14px 0;
-    font-size: 1.1rem;
-    border-radius: 15px;
-    cursor: pointer;
-    font-weight: 600;
-    box-shadow: 0 6px 12px rgba(216, 27, 96,0.5);
-    transition: background-color 0.3s ease;
-  }
-
-  button:hover {
-    background: #ad1457;
-  }
-
-  .forgot-password {
-    margin-top: 1rem;
-    font-size: 0.85rem;
-    color: #ba68c8;
-    cursor: pointer;
-    text-decoration: underline;
-  }
-
-  .forgot-password:hover {
-    color: #8e24aa;
-  }
-
-  @media (max-width: 400px) {
-    .login-container, .main-content {
-      width: 90%;
-      padding: 2rem 1.5rem;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Login - Pink Blossom</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body, html {
+      height: 100%;
+      font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(135deg, #fce4ec, #f8bbd0);
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-  }
-</style>
+    .login-container {
+      background: #fff0f6;
+      padding: 3rem 2.5rem;
+      border-radius: 20px;
+      width: 350px;
+      box-shadow: 0 15px 30px rgba(244, 143, 177,0.25);
+      text-align: center;
+    }
+    h2 { color: #d81b60; font-weight: 600; margin-bottom: 1rem; }
+    p { color: #ad1457; margin-bottom: 2rem; }
+    .form-group { margin-bottom: 1.5rem; text-align: left; }
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-weight: 600;
+      color: #880e4f;
+      font-size: 0.9rem;
+    }
+    input {
+      width: 100%;
+      padding: 12px 15px;
+      border: 2px solid #f48fb1;
+      border-radius: 12px;
+      font-size: 1rem;
+      transition: border-color 0.3s ease;
+    }
+    input:focus {
+      border-color: #ce93d8;
+      outline: none;
+    }
+    button {
+      width: 100%;
+      background: #d81b60;
+      border: none;
+      color: white;
+      padding: 14px 0;
+      font-size: 1.1rem;
+      border-radius: 15px;
+      cursor: pointer;
+      font-weight: 600;
+      box-shadow: 0 6px 12px rgba(216, 27, 96,0.5);
+      transition: background-color 0.3s ease;
+    }
+    button:hover { background: #ad1457; }
+    .forgot-password {
+      margin-top: 1rem;
+      font-size: 0.85rem;
+      color: #ba68c8;
+      cursor: pointer;
+      text-decoration: underline;
+    }
+    .forgot-password:hover { color: #8e24aa; }
+    #loginStatus {
+      margin-top: 12px;
+      font-size: 0.9rem;
+      color: #d81b60;
+    }
+  </style>
 </head>
 <body>
+  <div class="login-container">
+    <h2>Welcome Back</h2>
+    <p>Sign in to continue to Pink Blossom</p>
+    <form id="loginForm">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" id="username" required placeholder="Enter your username" />
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" id="password" required placeholder="Enter your password" />
+      </div>
+      <button type="submit">Log In</button>
+    </form>
+    <div class="forgot-password" onclick="alert('Password reset not implemented.')">Forgot Password?</div>
+    <div id="loginStatus" role="alert" aria-live="polite"></div>
+  </div>
 
-<!-- LOGIN FORM -->
-<div id="loginSection" class="login-container" role="main" aria-label="Login form">
-  <h2>Welcome Back</h2>
-  <p>Sign in to continue to Pink Blossom</p>
-  <form id="loginForm" aria-describedby="loginStatus">
-    <div class="form-group">
-      <label for="emailInput">Email Address</label>
-      <input type="email" id="emailInput" name="email" required placeholder="you@example.com" autocomplete="username" />
-    </div>
-    <div class="form-group">
-      <label for="passwordInput">Password</label>
-      <input type="password" id="passwordInput" name="password" required placeholder="Your password" autocomplete="current-password" />
-    </div>
-    <button type="submit">Log In</button>
-  </form>
-  <div class="forgot-password" tabindex="0" role="button" aria-pressed="false">Forgot Password?</div>
-  <div id="loginStatus" role="alert" aria-live="polite" style="margin-top:12px; font-size:0.9rem; color:#d81b60;"></div>
-</div>
-
-<!-- INDEX / MAIN PAGE -->
-<div id="mainSection" class="main-content hidden">
-  <h2>Welcome to Pink Blossom 🌸</h2>
-  <p style="color: #6a1b9a; margin-top: 1rem;">You are now logged in.</p>
-  <button onclick="logout()">Log Out</button>
-</div>
-
-<script>
-  const loginForm = document.getElementById('loginForm');
-  const loginSection = document.getElementById('loginSection');
-  const mainSection = document.getElementById('mainSection');
-  const statusEl = document.getElementById('loginStatus');
-
-  loginForm.addEventListener('submit', function(e) {
-    e.preventDefault();
-    const email = e.target.email.value.trim();
-    const password = e.target.password.value.trim();
-    statusEl.textContent = '';
-
-    if (!email || !password) {
-      statusEl.textContent = 'Please fill in both fields.';
-      return;
-    }
-
-    statusEl.style.color = '#4a148c';
-    statusEl.textContent = 'Logging in...';
-
-    setTimeout(() => {
-      loginSection.classList.add('hidden');
-      mainSection.classList.remove('hidden');
-    }, 1200);
-  });
-
-  const forgotPassword = document.querySelector('.forgot-password');
-  forgotPassword.addEventListener('click', () => {
-    alert('Password reset feature is not implemented in this demo.');
-  });
-  forgotPassword.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
+  <script>
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
       e.preventDefault();
-      forgotPassword.click();
-    }
-  });
+      const username = document.getElementById('username').value.trim();
+      const password = document.getElementById('password').value.trim();
+      const loginStatus = document.getElementById('loginStatus');
 
-  function logout() {
-    mainSection.classList.add('hidden');
-    loginSection.classList.remove('hidden');
-    loginForm.reset();
-    statusEl.textContent = '';
-  }
-</script>
+      if (!username || !password) {
+        loginStatus.style.color = '#c62828';
+        loginStatus.textContent = 'Please fill in both fields.';
+        return;
+      }
+
+      // Simulate successful login
+      loginStatus.style.color = '#4a148c';
+      loginStatus.textContent = 'Logging in...';
+
+      // Optionally save username to localStorage
+      localStorage.setItem('loggedInUser', username);
+
+      setTimeout(() => {
+        window.location.href = 'index.html';
+      }, 1000);
+    });
+  </script>
 </body>
 </html>
