--- a/login.html
+++ b/login.html
@@ -2,179 +2,146 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Pink Blossom</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Pink Blossom</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body, html {
-      height: 100%;
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #fce4ec, #f8bbd0);
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    body {
+      height: 100vh;
+      background: linear-gradient(135deg, #fbc2eb, #a6c1ee);
       display: flex;
       justify-content: center;
       align-items: center;
     }
-    .login-container, .index-container {
-      background: #fff0f6;
-      padding: 3rem 2.5rem;
+    .login-container {
+      background-color: #fff0f5;
+      padding: 2.5rem 3rem;
       border-radius: 20px;
-      width: 350px;
-      box-shadow: 0 15px 30px rgba(244, 143, 177, 0.25);
+      box-shadow: 0 8px 20px rgba(255, 182, 193, 0.4);
+      width: 100%;
+      max-width: 400px;
       text-align: center;
-      display: none;
     }
-    .login-container.active, .index-container.active {
-      display: block;
-    }
-    h2, h1 {
-      color: #d81b60;
-      font-weight: 600;
-      margin-bottom: 1rem;
-    }
-    p {
-      color: #ad1457;
+    h2 {
+      color: #d36ba6;
       margin-bottom: 1.5rem;
+      font-size: 2rem;
     }
     .form-group {
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.2rem;
       text-align: left;
     }
     label {
       display: block;
-      margin-bottom: 0.5rem;
-      font-weight: 600;
-      color: #880e4f;
-      font-size: 0.9rem;
+      margin-bottom: 0.4rem;
+      color: #a14b7d;
+      font-weight: bold;
     }
-    input {
+    input[type="text"],
+    input[type="password"] {
       width: 100%;
-      padding: 12px 15px;
-      border: 2px solid #f48fb1;
+      padding: 0.75rem;
+      border: 2px solid #f8cdd9;
       border-radius: 12px;
       font-size: 1rem;
-      transition: border-color 0.3s ease;
     }
     input:focus {
-      border-color: #ce93d8;
+      border-color: #ff99cc;
       outline: none;
+      box-shadow: 0 0 5px #ffb6c1;
     }
-    button {
+    .login-btn {
+      margin-top: 1.2rem;
       width: 100%;
-      background: #d81b60;
+      padding: 0.85rem;
       border: none;
+      border-radius: 12px;
+      background-color: #ff69b4;
       color: white;
-      padding: 14px 0;
       font-size: 1.1rem;
-      border-radius: 15px;
+      font-weight: bold;
       cursor: pointer;
-      font-weight: 600;
-      box-shadow: 0 6px 12px rgba(216, 27, 96, 0.5);
-      transition: background-color 0.3s ease;
+      transition: background 0.3s ease;
     }
-    button:hover {
-      background: #ad1457;
+    .login-btn:hover {
+      background-color: #e754a5;
     }
-    .forgot-password {
-      margin-top: 1rem;
-      font-size: 0.85rem;
-      color: #ba68c8;
-      cursor: pointer;
-      text-decoration: underline;
-    }
-    .forgot-password:hover {
-      color: #8e24aa;
-    }
-    .logout-btn {
-      margin-top: 2rem;
-      color: #ba68c8;
-      text-decoration: underline;
-      font-weight: 600;
-      cursor: pointer;
-    }
-    .logout-btn:hover {
-      color: #8e24aa;
-    }
-    #loginStatus {
-      margin-top: 12px;
+    .error-message {
+      color: #d03e3e;
       font-size: 0.9rem;
-      color: #d81b60;
+      margin-top: 0.5rem;
+      display: none;
+    }
+    .footer-text {
+      margin-top: 1.5rem;
+      font-size: 0.9rem;
+      color: #7a557f;
+    }
+    .footer-text a {
+      color: #ff69b4;
+      text-decoration: none;
+    }
+    .footer-text a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <!-- Login Section -->
-  <div class="login-container active" id="loginSection">
-    <h2>Welcome Back</h2>
-    <p>Sign in to continue to Pink Blossom</p>
-    <form id="loginForm">
+  <div class="login-container">
+    <h2>Welcome Back 🌸</h2>
+    <form id="loginForm" novalidate>
       <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" required placeholder="Enter your username" />
+        <label for="username">Username or Email</label>
+        <input type="text" id="username" name="username" required />
+        <div class="error-message" id="usernameError">Please enter your username or email.</div>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" required placeholder="Enter your password" />
+        <input type="password" id="password" name="password" required />
+        <div class="error-message" id="passwordError">Please enter your password.</div>
       </div>
-      <button type="submit">Log In</button>
+      <button type="submit" class="login-btn">Login</button>
+      <div class="error-message" id="loginError"></div>
     </form>
-    <div class="forgot-password" onclick="alert('Password reset not available yet.')">Forgot Password?</div>
-    <div id="loginStatus" role="alert" aria-live="polite"></div>
-  </div>
-
-  <!-- Index/Home Section -->
-  <div class="index-container" id="indexSection">
-    <h1 id="welcomeUser">Welcome! 🌸</h1>
-    <p>You are now logged in to Pink Blossom.</p>
-    <div class="logout-btn" onclick="logout()">Log out</div>
+    <p class="footer-text">Don't have an account? <a href="index.html">Create one</a></p>
   </div>
 
   <script>
-    const loginSection = document.getElementById('loginSection');
-    const indexSection = document.getElementById('indexSection');
-    const welcomeUser = document.getElementById('welcomeUser');
     const loginForm = document.getElementById('loginForm');
-    const loginStatus = document.getElementById('loginStatus');
+    const usernameInput = document.getElementById('username');
+    const passwordInput = document.getElementById('password');
+    const usernameError = document.getElementById('usernameError');
+    const passwordError = document.getElementById('passwordError');
 
-    function showIndex(username) {
-      loginSection.classList.remove('active');
-      indexSection.classList.add('active');
-      welcomeUser.textContent = `Welcome, ${username}! 🌸`;
-    }
+    loginForm.addEventListener('submit', function(event) {
+      event.preventDefault();
 
-    function logout() {
-      localStorage.removeItem('loggedInUser');
-      indexSection.classList.remove('active');
-      loginSection.classList.add('active');
-    }
+      let isValid = true;
 
-    loginForm.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-
-      if (!username || !password) {
-        loginStatus.style.color = '#c62828';
-        loginStatus.textContent = 'Please fill in both fields.';
-        return;
+      if (usernameInput.value.trim() === '') {
+        usernameError.style.display = 'block';
+        isValid = false;
+      } else {
+        usernameError.style.display = 'none';
       }
 
-      loginStatus.style.color = '#4a148c';
-      loginStatus.textContent = 'Logging in...';
+      if (passwordInput.value.trim() === '') {
+        passwordError.style.display = 'block';
+        isValid = false;
+      } else {
+        passwordError.style.display = 'none';
+      }
 
-      localStorage.setItem('loggedInUser', username);
-
-      setTimeout(() => {
-        loginStatus.textContent = '';
-        showIndex(username);
-      }, 1000);
+      if (isValid) {
+        // Redirect ke index.html jika login berhasil
+        window.location.href = 'index.html';
+      }
     });
-
-    // Check if already logged in
-    const storedUser = localStorage.getItem('loggedInUser');
-    if (storedUser) {
-      showIndex(storedUser);
-    }
   </script>
 </body>
 </html>
