--- a/login.html
+++ b/login.html
@@ -93,7 +93,7 @@
 </head>
 <body>
   <div class="login-container">
-    <h2>Welcome Back 🌸</h2>
+    <h2>Login</h2>
     <form id="loginForm" novalidate>
       <div class="form-group">
         <label for="username">Username or Email</label>
@@ -138,7 +138,7 @@
       }
 
       if (isValid) {
-        // Redirect ke index.html jika login berhasil
+        // Langsung redirect ke index.html
         window.location.href = 'index.html';
       }
     });
